--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PoustouFlan - Site personnel</title>
+  <title>PoustouFlan</title>
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans&display=swap" rel="stylesheet">
   <!-- FontAwesome Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="discord_profile.png" type="image/x-icon">
 </head>
 <body>
   <header>
@@ -101,7 +102,7 @@
     <hr class="divider">
     
     <!-- Section Concerts -->
-    <section id="music" class="section-bg">
+    <section id="music" class="section-alt">
       <h2>Extraits de mes derniers concerts</h2>
       <div class="carousel-container">
         <button id="prevBtn" class="carousel-btn">&#10094;</button>
@@ -123,7 +124,7 @@
     <hr class="divider">
     
     <!-- Section Nouvelles -->
-    <section id="news" class="section-alt">
+    <section id="news" class="section-bg">
       <h2>Lisez les news !</h2>
       <div>
       <div class="upcoming-events">
@@ -231,7 +232,7 @@
   </main>
   
   <footer>
-    <p>Codé avec le cul par &copy; 2025 PoustouFlan. Tous droits réservés.</p>
+    <p><a href="https://github.com/Poustouflan/website" target="_blank">Codé avec le cul</a> par &copy; 2025 PoustouFlan. Tous droits réservés.</p>
   </footer>
   
   <script src="script.js"></script>
